add introduction beta